fixing overflow on nav

--- a/src/input.css
+++ b/src/input.css
@@ -34,7 +34,6 @@ html {
 }
 
 body {
-  background-color: var(--primary-background);
   color: white;
   font-size: 1.5em;
   font-family: "Jura", sans-serif;
@@ -251,14 +250,13 @@ body {
         left: 0;
         width: 100%;
         z-index: 1000;
-        background-color: var(--nav-background);
         ul.navMenu {
           position: fixed;
           left: -100%;
           top: 80px;
           gap: 8px;
           padding: 40px 0;
-          background-color: var(--primary-background);
+          
           flex-direction: column;
           width: 100%;
           text-align: center;
